{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 245,
  "lineage": "de289eed-df41-af3d-8fd4-ab00c54c993e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "udit_elasticip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04896808bd05d3515",
            "public_dns": "ec2-3-7-247-41.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.247.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a8c73a650069cf3",
            "arn": "arn:aws:ec2:ap-south-1:130436746957:instance/i-03baa745eff632119",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03baa745eff632119",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "udit33",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-065162d5030326c98",
            "private_dns": "ip-192-168-0-139.ap-south-1.compute.internal",
            "private_ip": "192.168.0.139",
            "public_ip": "35.154.184.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00a525432ecfb348d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06437419a70985b7b",
            "tags": {
              "Name": "Bastion Host Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078b513bf145970d7"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_subnet.udit_public_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0025b3a1ef8df0c3b",
            "arn": "arn:aws:ec2:ap-south-1:130436746957:instance/i-004c5988fc4196285",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004c5988fc4196285",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "udit33",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ee2237690892b34",
            "private_dns": "ip-192-168-100-66.ap-south-1.compute.internal",
            "private_ip": "192.168.100.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b25759efa55225d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6ae32fb77c5b9b9",
            "tags": {
              "Name": "Mysql Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0195a0c84ae5714b3",
              "sg-0a5c4d2b6bfc4eba9"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.mysql_sg1",
            "aws_security_group.mysql_sg2",
            "aws_security_group.wordpress_sg",
            "aws_subnet.udit_private_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b9cb595fc660622",
            "arn": "arn:aws:ec2:ap-south-1:130436746957:instance/i-00b903577f05622d7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b903577f05622d7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "udit33",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d167a2411dae9c51",
            "private_dns": "ip-192-168-0-24.ap-south-1.compute.internal",
            "private_ip": "192.168.0.24",
            "public_ip": "35.154.242.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-037153f1c53c21203",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06437419a70985b7b",
            "tags": {
              "Name": "Wordpress Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f14e20dcfc10693"
            ]
          },
          "dependencies": [
            "aws_security_group.wordpress_sg",
            "aws_subnet.udit_public_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:internet-gateway/igw-0791caa03b99ab288",
            "id": "igw-0791caa03b99ab288",
            "owner_id": "130436746957",
            "tags": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04896808bd05d3515",
            "id": "nat-0c9e96e6ce6a7d687",
            "network_interface_id": "eni-028be79c50dd200b2",
            "private_ip": "192.168.0.211",
            "public_ip": "3.7.247.41",
            "subnet_id": "subnet-06437419a70985b7b",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.udit_elasticip",
            "aws_subnet.udit_public_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "udit_route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e17324f891c0bd20",
            "owner_id": "130436746957",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0791caa03b99ab288",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udit_route1"
            },
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "udit_route2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aade794ba10d16ad",
            "owner_id": "130436746957",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c9e96e6ce6a7d687",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udit-route2"
            },
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_eip.udit_elasticip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.udit_public_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0997b94892e365799",
            "route_table_id": "rtb-0e17324f891c0bd20",
            "subnet_id": "subnet-06437419a70985b7b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.udit_route1",
            "aws_subnet.udit_public_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccd970ab9b6e1484",
            "route_table_id": "rtb-0aade794ba10d16ad",
            "subnet_id": "subnet-0d6ae32fb77c5b9b9"
          },
          "dependencies": [
            "aws_eip.udit_elasticip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.udit_route2",
            "aws_subnet.udit_private_subnet",
            "aws_subnet.udit_public_subnet",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:security-group/sg-078b513bf145970d7",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078b513bf145970d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_host_sg",
            "name_prefix": null,
            "owner_id": "130436746957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_host_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:security-group/sg-0a5c4d2b6bfc4eba9",
            "description": "Allow wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5c4d2b6bfc4eba9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Wordpress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f14e20dcfc10693"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql_sg1",
            "name_prefix": null,
            "owner_id": "130436746957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_security_group.wordpress_sg",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:security-group/sg-0195a0c84ae5714b3",
            "description": "Allow Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0195a0c84ae5714b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078b513bf145970d7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql_sg2",
            "name_prefix": null,
            "owner_id": "130436746957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:security-group/sg-00f14e20dcfc10693",
            "description": "Allow ssh, http and icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f14e20dcfc10693",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Icmp",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_sg",
            "name_prefix": null,
            "owner_id": "130436746957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "udit_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:subnet/subnet-0d6ae32fb77c5b9b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.100.0/24",
            "id": "subnet-0d6ae32fb77c5b9b9",
            "map_public_ip_on_launch": false,
            "owner_id": "130436746957",
            "tags": {
              "Name": "udit_private_subnet"
            },
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "udit_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:subnet/subnet-06437419a70985b7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-06437419a70985b7b",
            "map_public_ip_on_launch": true,
            "owner_id": "130436746957",
            "tags": {
              "Name": "udit_public_subnet"
            },
            "vpc_id": "vpc-0ec0e525f44b6a62d"
          },
          "dependencies": [
            "aws_vpc.udit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "udit_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130436746957:vpc/vpc-0ec0e525f44b6a62d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f94895fd592d225e",
            "default_route_table_id": "rtb-0a63a85085dc185a2",
            "default_security_group_id": "sg-03ca41f8f30f30ccd",
            "dhcp_options_id": "dopt-17b3757c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ec0e525f44b6a62d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a63a85085dc185a2",
            "owner_id": "130436746957",
            "tags": {
              "Name": "udit_vpc"
            }
          }
        }
      ]
    }
  ]
}